2009-02-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/builder.[hg|ccg]: create_from_file(), add_from_file(), 
	create_from_string(), add_from_string(): Add method overloads that 
	take a char* for the object ID, to avoid ambiguity with the two 
	other overloads that take ustring or StringArrayHandle. 

2009-03-17  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/stockid.cc: Implement operator().
	* gtk/src/textbuffer.ccg: Actually implement the const get_text(bool) 
	method. These fix undefined symbol linker errors when people try to use 
	these methods.
	
2009-03-06  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/textbuffer.{ccg,hg} (TextBuffer::[gs]et_rich_text_format):
	Remove Maemo-specific methods which have been superseded by the
	generic TextBuffer serialization facilities.
	(TextBuffer::set_rich_text_format_all): ditto,
	(TextBuffer::[gs]et_can_paste_rich_text): ditto.

2009-03-06  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/enums.hg (Gtk::Hildon::SizeType): New Maemo-specific
	enumeration corresponding to HildonSizeType.
	(Gtk::Hildon::InputMode): New Maemo-specific enumeration
	corresponding to HildonGtkInputMode.

2009-03-06  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/gtk_enums_maemo.defs: New separate defs file for the
	changes in the Maemo fork of GTK+.
	* gtk/src/gtk_methods_maemo.defs: Likewise.
	* gtk/src/gtk.defs: Include the Maemo defs files.
	* gtk/src/Makefile.am (files_defs): Add the new defs files.

2009-02-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/builder.hg: get_widget_derived():
	* gtk/src/builder.ccg: get_widget_checked(): Take a reference on 
	the widget received from gtk_builder_get_object() because it does 
	not give one.

2009-01-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/stock.cc: Actually define and initialize 
	ORIENTATION_PORTRAIT, ORIENTATION_LANDSCAPE, 
	ORIENTATION_REVERSE_LANDSCAPE, and ORIENTATION_REVERSE_PORTRAIT, 