@@ -60,7 +60,12 @@ public:
    *
    * @newin2p12
    */
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
   static Glib::RefPtr<Builder> create_from_file(const std::string& filename);
+#else
+  static Glib::RefPtr<Builder> create_from_file(const std::string& filename,
+                                                std::auto_ptr<Glib::Error>& error);
+#endif
 
   /** Parses a file containing a GtkBuilder UI definition, building only the requested object.
    *
@@ -121,8 +126,12 @@ public:
    *
    * @newin2p12
    */
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
   static Glib::RefPtr<Builder> create_from_string(const Glib::ustring& buffer);
-
+#else
+  static Glib::RefPtr<Builder> create_from_string(const Glib::ustring& buffer,
+                                                  std::auto_ptr<Glib::Error>& error);
+#endif
   //This is just to avoid the ambiguous call when using a string literal, 
   //caused by the overload that takes a StringArrayHandle.
   /** Parses a string containing a GtkBuilder UI definition building only the requested object.
