@@ -1,3 +1,11 @@
+2009-03-23  Daniel Elstner  <danielk@openismus.com>
+
+	* gtk/src/builder.{ccg,hg}: Conditionalize all exception handling
+	code in order to fix the build with --disable-api-exceptions.
+	* gtk/src/printjob.hg: ditto,
+	* demos/gtk-demo/example_images.cc: ditto,
+	* demos/gtk-demo/example_treeview_treestore.cc: ditto.
+
 2009-02-22  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/builder.[hg|ccg]: create_from_file(), add_from_file(), 
